...
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/notifications"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

...
                                android:layout_weight="1"
                                android:text="@string/setting_to_allow_push_of_notifications_to_user_s_phone"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:id="@+id/switchSystemNotifications"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:thumbTint="@color/Iowa_State_Red"
                                app:trackTint="@color/dark_grey" />
                        </LinearLayout>

...
                                android:layout_weight="1"
                                android:text="@string/configures_notifications_to_be_sent_as_push_notifications"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:id="@+id/switchPushNotifications"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:thumbTint="@color/Iowa_State_Red"
                                app:trackTint="@color/dark_grey" />
                        </LinearLayout>

...
                                android:layout_weight="1"
                                android:text="@string/sets_reminders_of_calorie_intakes_or_meals"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:id="@+id/switchReminders"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:thumbTint="@color/Iowa_State_Red"
                                app:trackTint="@color/dark_grey" />
                        </LinearLayout>
                    </LinearLayout>
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/notificationTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Notification Title"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/notificationMessage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Notification Message"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
...
                            android:id="@+id/radioSMS"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="SMS Notification"/>

                        <RadioButton
                            android:id="@+id/radioEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Email Notification"/>
                    </RadioGroup>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/testNotificationButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Test Notification"
                        app:backgroundTint="@color/Iowa_State_Red"/>

                </LinearLayout>
...
