<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_menus"
        android:icon="@drawable/menu_icon"
        android:title="@string/menus" />

    <item
        android:id="@+id/nav_tracker"
        android:icon="@drawable/tracker_icon"
        android:title="@string/tracker" />

    <item
        android:id="@+id/nav_goals"
        android:icon="@drawable/goals_icon"
        android:title="@string/goals" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />
</menu>